[package]
name = "ada-pi-cam"
version = "0.1.0"
authors = ["Ada Rose Cannon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rscam = "0.5.5"
framebuffer = "0.2.0"
rust-embed="5.5.1"
evdev="0.10.1"

[features]
default = ["rscam/no_wrapper"]
